crates/squawk_parser/tests/snapshots/tests__drop_extension_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/drop_extension.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  DROP_EXTENSION
    DROP_KW "drop"
    WHITESPACE " "
    EXTENSION_KW "extension"
    WHITESPACE " "
    EXTENSION_REF
      IDENT "s"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  DROP_EXTENSION
    DROP_KW "drop"
    WHITESPACE " "
    EXTENSION_KW "extension"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    EXTENSION_REF
      IDENT "a"
    COMMA ","
    WHITESPACE " "
    EXTENSION_REF
      IDENT "b"
    COMMA ","
    WHITESPACE " "
    EXTENSION_REF
      IDENT "c"
    WHITESPACE " "
    CASCADE
      CASCADE_KW "cascade"
    SEMICOLON ";"
  WHITESPACE "\n"
  DROP_EXTENSION
    DROP_KW "drop"
    WHITESPACE " "
    EXTENSION_KW "extension"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    EXTENSION_REF
      IDENT "a"
    COMMA ","
    WHITESPACE " "
    EXTENSION_REF
      IDENT "b"
    COMMA ","
    WHITESPACE " "
    EXTENSION_REF
      IDENT "c"
    WHITESPACE " "
    RESTRICT
      RESTRICT_KW "restrict"
    SEMICOLON ";"
  WHITESPACE "\n\n"
