crates/squawk_parser/tests/snapshots/tests__drop_foreign_data_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/drop_foreign_data.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  DROP_FOREIGN_DATA_WRAPPER
    DROP_KW "drop"
    WHITESPACE " "
    FOREIGN_KW "foreign"
    WHITESPACE " "
    DATA_KW "data"
    WHITESPACE " "
    WRAPPER_KW "wrapper"
    WHITESPACE " "
    FOREIGN_DATA_WRAPPER_REF
      IDENT "s"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  DROP_FOREIGN_DATA_WRAPPER
    DROP_KW "drop"
    WHITESPACE " "
    FOREIGN_KW "foreign"
    WHITESPACE " "
    DATA_KW "data"
    WHITESPACE " "
    WRAPPER_KW "wrapper"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    FOREIGN_DATA_WRAPPER_REF
      IDENT "a"
    COMMA ","
    WHITESPACE " "
    FOREIGN_DATA_WRAPPER_REF
      IDENT "b"
    COMMA ","
    WHITESPACE " "
    FOREIGN_DATA_WRAPPER_REF
      IDENT "c"
    WHITESPACE " "
    CASCADE
      CASCADE_KW "cascade"
    SEMICOLON ";"
  WHITESPACE "\n"
  DROP_FOREIGN_DATA_WRAPPER
    DROP_KW "drop"
    WHITESPACE " "
    FOREIGN_KW "foreign"
    WHITESPACE " "
    DATA_KW "data"
    WHITESPACE " "
    WRAPPER_KW "wrapper"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    FOREIGN_DATA_WRAPPER_REF
      IDENT "a"
    COMMA ","
    WHITESPACE " "
    FOREIGN_DATA_WRAPPER_REF
      IDENT "b"
    COMMA ","
    WHITESPACE " "
    FOREIGN_DATA_WRAPPER_REF
      IDENT "c"
    WHITESPACE " "
    RESTRICT
      RESTRICT_KW "restrict"
    SEMICOLON ";"
  WHITESPACE "\n\n"
