crates/squawk_parser/tests/snapshots/tests__drop_operator_family_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/drop_operator_family.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  DROP_OPERATOR_FAMILY
    DROP_KW "drop"
    WHITESPACE " "
    OPERATOR_KW "operator"
    WHITESPACE " "
    FAMILY_KW "family"
    WHITESPACE " "
    OP_FAMILY_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "n"
    WHITESPACE " "
    USING_METHOD
      USING_KW "using"
      WHITESPACE " "
      ACCESS_METHOD_REF
        IDENT "i"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  DROP_OPERATOR_FAMILY
    DROP_KW "drop"
    WHITESPACE " "
    OPERATOR_KW "operator"
    WHITESPACE " "
    FAMILY_KW "family"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    OP_FAMILY_REF
      PATH_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "foo"
        DOT "."
        PATH_SEGMENT_REF
          IDENT "f"
    WHITESPACE " "
    USING_METHOD
      USING_KW "using"
      WHITESPACE " "
      ACCESS_METHOD_REF
        IDENT "i"
    WHITESPACE " "
    CASCADE
      CASCADE_KW "cascade"
    SEMICOLON ";"
  WHITESPACE "\n"
  DROP_OPERATOR_FAMILY
    DROP_KW "drop"
    WHITESPACE " "
    OPERATOR_KW "operator"
    WHITESPACE " "
    FAMILY_KW "family"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    OP_FAMILY_REF
      PATH_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "bar"
        DOT "."
        PATH_SEGMENT_REF
          IDENT "b"
    WHITESPACE " "
    USING_METHOD
      USING_KW "using"
      WHITESPACE " "
      ACCESS_METHOD_REF
        IDENT "i"
    WHITESPACE " "
    RESTRICT
      RESTRICT_KW "restrict"
    SEMICOLON ";"
  WHITESPACE "\n\n"
