crates/squawk_parser/tests/snapshots/tests__drop_owned_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/drop_owned.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  DROP_OWNED
    DROP_KW "drop"
    WHITESPACE " "
    OWNED_KW "owned"
    WHITESPACE " "
    BY_KW "by"
    WHITESPACE " "
    ROLE_REF_LIST
      ROLE_REF
        ROLE_NAME_REF
          IDENT "s"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  DROP_OWNED
    DROP_KW "drop"
    WHITESPACE " "
    OWNED_KW "owned"
    WHITESPACE " "
    BY_KW "by"
    WHITESPACE " "
    ROLE_REF_LIST
      ROLE_REF
        ROLE_NAME_REF
          IDENT "a"
      COMMA ","
      WHITESPACE " "
      ROLE_REF
        ROLE_REF_CURRENT_ROLE
          CURRENT_ROLE_KW "current_role"
      COMMA ","
      WHITESPACE " "
      ROLE_REF
        ROLE_NAME_REF
          IDENT "c"
    WHITESPACE " "
    CASCADE
      CASCADE_KW "cascade"
    SEMICOLON ";"
  WHITESPACE "\n"
  DROP_OWNED
    DROP_KW "drop"
    WHITESPACE " "
    OWNED_KW "owned"
    WHITESPACE " "
    BY_KW "by"
    WHITESPACE " "
    ROLE_REF_LIST
      ROLE_REF
        ROLE_REF_SESSION_USER
          SESSION_USER_KW "session_user"
      COMMA ","
      WHITESPACE " "
      ROLE_REF
        ROLE_REF_CURRENT_USER
          CURRENT_USER_KW "current_user"
    WHITESPACE " "
    RESTRICT
      RESTRICT_KW "restrict"
    SEMICOLON ";"
  WHITESPACE "\n\n"
