crates/squawk_parser/tests/snapshots/tests__drop_policy_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/drop_policy.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  DROP_POLICY
    DROP_KW "drop"
    WHITESPACE " "
    POLICY_KW "policy"
    WHITESPACE " "
    POLICY_REF
      IDENT "s"
    WHITESPACE " "
    ON_TABLE
      ON_KW "on"
      WHITESPACE " "
      TABLE_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "t"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  DROP_POLICY
    DROP_KW "drop"
    WHITESPACE " "
    POLICY_KW "policy"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    POLICY_REF
      IDENT "r"
    WHITESPACE " "
    ON_TABLE
      ON_KW "on"
      WHITESPACE " "
      TABLE_NAME_REF
        PATH_REF
          PATH_REF
            PATH_SEGMENT_REF
              IDENT "foo"
          DOT "."
          PATH_SEGMENT_REF
            IDENT "t_name"
    WHITESPACE " "
    CASCADE
      CASCADE_KW "cascade"
    SEMICOLON ";"
  WHITESPACE "\n"
  DROP_POLICY
    DROP_KW "drop"
    WHITESPACE " "
    POLICY_KW "policy"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    POLICY_REF
      IDENT "r"
    WHITESPACE " "
    ON_TABLE
      ON_KW "on"
      WHITESPACE " "
      TABLE_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "a"
    WHITESPACE " "
    RESTRICT
      RESTRICT_KW "restrict"
    SEMICOLON ";"
  WHITESPACE "\n\n"
