crates/squawk_parser/tests/snapshots/tests__drop_property_graph_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/drop_property_graph.sql
---
SOURCE_FILE
  DROP_PROPERTY_GRAPH
    DROP_KW "drop"
    WHITESPACE " "
    PROPERTY_KW "property"
    WHITESPACE " "
    GRAPH_KW "graph"
    WHITESPACE " "
    PROPERTY_GRAPH_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "g"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  DROP_PROPERTY_GRAPH
    DROP_KW "drop"
    WHITESPACE " "
    PROPERTY_KW "property"
    WHITESPACE " "
    GRAPH_KW "graph"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    PROPERTY_GRAPH_REF
      PATH_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "foo"
        DOT "."
        PATH_SEGMENT_REF
          IDENT "bar"
    WHITESPACE " "
    CASCADE
      CASCADE_KW "cascade"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  DROP_PROPERTY_GRAPH
    DROP_KW "drop"
    WHITESPACE " "
    PROPERTY_KW "property"
    WHITESPACE " "
    GRAPH_KW "graph"
    WHITESPACE " "
    PROPERTY_GRAPH_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "g"
    WHITESPACE " "
    RESTRICT
      RESTRICT_KW "restrict"
    SEMICOLON ";"
  WHITESPACE "\n"
