crates/squawk_parser/tests/snapshots/tests__drop_sequence_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/drop_sequence.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  DROP_SEQUENCE
    DROP_KW "drop"
    WHITESPACE " "
    SEQUENCE_KW "sequence"
    WHITESPACE " "
    SEQUENCE_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "s"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  DROP_SEQUENCE
    DROP_KW "drop"
    WHITESPACE " "
    SEQUENCE_KW "sequence"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    SEQUENCE_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "a"
    COMMA ","
    WHITESPACE " "
    SEQUENCE_REF
      PATH_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "foo"
        DOT "."
        PATH_SEGMENT_REF
          IDENT "b"
    COMMA ","
    WHITESPACE " "
    SEQUENCE_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "c"
    WHITESPACE " "
    CASCADE
      CASCADE_KW "cascade"
    SEMICOLON ";"
  WHITESPACE "\n"
  DROP_SEQUENCE
    DROP_KW "drop"
    WHITESPACE " "
    SEQUENCE_KW "sequence"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    SEQUENCE_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "a"
    COMMA ","
    WHITESPACE " "
    SEQUENCE_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "b"
    COMMA ","
    WHITESPACE " "
    SEQUENCE_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "c"
    WHITESPACE " "
    RESTRICT
      RESTRICT_KW "restrict"
    SEMICOLON ";"
  WHITESPACE "\n\n"
