crates/squawk_parser/tests/snapshots/tests__drop_statistics_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/drop_statistics.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  DROP_STATISTICS
    DROP_KW "drop"
    WHITESPACE " "
    STATISTICS_KW "statistics"
    WHITESPACE " "
    STATISTICS_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "s"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  DROP_STATISTICS
    DROP_KW "drop"
    WHITESPACE " "
    STATISTICS_KW "statistics"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    STATISTICS_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "a"
    COMMA ","
    WHITESPACE " "
    STATISTICS_REF
      PATH_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "foo"
        DOT "."
        PATH_SEGMENT_REF
          IDENT "b"
    COMMA ","
    WHITESPACE " "
    STATISTICS_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "c"
    WHITESPACE " "
    CASCADE
      CASCADE_KW "cascade"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  DROP_STATISTICS
    DROP_KW "drop"
    WHITESPACE " "
    STATISTICS_KW "statistics"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    STATISTICS_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "a"
    COMMA ","
    WHITESPACE " "
    STATISTICS_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "b"
    COMMA ","
    WHITESPACE " "
    STATISTICS_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "c"
    WHITESPACE " "
    RESTRICT
      RESTRICT_KW "restrict"
    SEMICOLON ";"
  WHITESPACE "\n\n"
